--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -10,6 +10,15 @@ appnamespace = "Application"
 resources.frontController.controllerDirectory = APPLICATION_PATH "/controllers"
 resources.frontController.params.displayExceptions = 1
 
+[mysql]
+db.adapter=PDO_MYSQL
+db.params.host=121.196.233.212
+db.params.username=zengyuwen
+db.params.password=327523057
+db.params.dbname=pm
+db.params.driver_options.1000 = 1
+db.params.driver_options.1001 = 1
+
 [staging : production]
 
 [testing : production]
